--- a/index.html
+++ b/index.html
@@ -3,124 +3,164 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hator Rockfall Keyboard</title>
+    <title>Keyboard full</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <div class="keyboard">
-      <div class="main-keys">
-        <div class="row">
-          <button class="key">Esc</button>
-          <button class="key">F1</button>
-          <button class="key">F2</button>
-          <button class="key">F3</button>
-          <button class="key">F4</button>
-          <button class="key">F5</button>
-          <button class="key">F6</button>
-          <button class="key">F7</button>
-          <button class="key">F8</button>
-          <button class="key">F9</button>
-          <button class="key">F10</button>
-          <button class="key">F11</button>
-          <button class="key">F12</button>
+    <div class="container">
+      <div class="keyboard">
+        <div class="key"><p>esc</p></div>
+        <div class="key"><p>F1</p></div>
+        <div class="key"><p>F2</p></div>
+        <div class="key"><p>F3</p></div>
+        <div class="key"><p>F4</p></div>
+        <div class="key"><p>F5</p></div>
+        <div class="key"><p>F6</p></div>
+        <div class="key"><p>F7</p></div>
+        <div class="key"><p>F8</p></div>
+        <div class="key"><p>F9</p></div>
+        <div class="key"><p>F10</p></div>
+        <div class="key"><p>F11</p></div>
+        <div class="key"><p>F12</p></div>
+        <div class="key"><p>end</p></div>
+        <div class="key"><p>fn</p></div>
+        <div class="key">
+          <p>~<br />`</p>
         </div>
-        <div class="row">
-          <button class="key">`</button>
-          <button class="key">1</button>
-          <button class="key">2</button>
-          <button class="key">3</button>
-          <button class="key">4</button>
-          <button class="key">5</button>
-          <button class="key">6</button>
-          <button class="key">7</button>
-          <button class="key">8</button>
-          <button class="key">9</button>
-          <button class="key">0</button>
-          <button class="key">-</button>
-          <button class="key">=</button>
-          <button class="key wide">Backspace</button>
+        <div class="key">
+          <p>1<br />!</p>
         </div>
-        <div class="row">
-          <button class="key wide">Tab</button>
-          <button class="key">Q</button>
-          <button class="key">W</button>
-          <button class="key">E</button>
-          <button class="key">R</button>
-          <button class="key">T</button>
-          <button class="key">Y</button>
-          <button class="key">U</button>
-          <button class="key">I</button>
-          <button class="key">O</button>
-          <button class="key">P</button>
-          <button class="key">[</button>
-          <button class="key">]</button>
-          <button class="key wide">\\</button>
+        <div class="key">
+          <p>2<br />@</p>
         </div>
-        <div class="row">
-          <button class="key wide">CapsLock</button>
-          <button class="key">A</button>
-          <button class="key">S</button>
-          <button class="key">D</button>
-          <button class="key">F</button>
-          <button class="key">G</button>
-          <button class="key">H</button>
-          <button class="key">J</button>
-          <button class="key">K</button>
-          <button class="key">L</button>
-          <button class="key">;</button>
-          <button class="key">'</button>
-          <button class="key wide">Enter</button>
+        <div class="key">
+          <p>3<br />#</p>
         </div>
-        <div class="row">
-          <button class="key wide">Shift</button>
-          <button class="key">Z</button>
-          <button class="key">X</button>
-          <button class="key">C</button>
-          <button class="key">V</button>
-          <button class="key">B</button>
-          <button class="key">N</button>
-          <button class="key">M</button>
-          <button class="key">,</button>
-          <button class="key">.</button>
-          <button class="key">/</button>
-          <button class="key wide">Shift</button>
+        <div class="key">
+          <p>4<br />$</p>
         </div>
-        <div class="row">
-          <button class="key">Ctrl</button>
-          <button class="key">Alt</button>
-          <button class="key wide">Space</button>
-          <button class="key">Alt</button>
-          <button class="key">Ctrl</button>
+        <div class="key">
+          <p>5<br />%</p>
         </div>
+        <div class="key">
+          <p>6<br />^</p>
+        </div>
+        <div class="key">
+          <p>7<br />&</p>
+        </div>
+        <div class="key">
+          <p>8<br />*</p>
+        </div>
+        <div class="key">
+          <p>9<br />(</p>
+        </div>
+        <div class="key">
+          <p>0<br />)</p>
+        </div>
+        <div class="key">
+          <p>-<br />_</p>
+        </div>
+        <div class="key">
+          <p>=<br />+</p>
+        </div>
+
+        <div class="key Backspace"><p>backspace</p></div>
+        <div class="key Tab"><p>tab</p></div>
+        <div class="key"><p>Q</p></div>
+        <div class="key"><p>W</p></div>
+        <div class="key"><p>E</p></div>
+        <div class="key"><p>R</p></div>
+        <div class="key"><p>T</p></div>
+        <div class="key"><p>Y</p></div>
+        <div class="key"><p>U</p></div>
+        <div class="key"><p>I</p></div>
+        <div class="key"><p>O</p></div>
+        <div class="key"><p>P</p></div>
+        <div class="key">
+          <p>[<br />{</p>
+        </div>
+        <div class="key">
+          <p>]<br />}</p>
+        </div>
+        <div class="key">
+          <p>|<br />\</p>
+        </div>
+
+        <div class="key CapsLock"><p>caps lock</p></div>
+        <div class="key"><p>A</p></div>
+        <div class="key"><p>S</p></div>
+        <div class="key"><p>D</p></div>
+        <div class="key"><p>F</p></div>
+        <div class="key"><p>G</p></div>
+        <div class="key"><p>H</p></div>
+        <div class="key"><p>J</p></div>
+        <div class="key"><p>K</p></div>
+        <div class="key"><p>L</p></div>
+        <div class="key">
+          <p>;<br />:</p>
+        </div>
+        <div class="key">
+          <p>'<br />"</p>
+        </div>
+        <div class="key Enter"><p>enter</p></div>
+
+        <div class="key Shift shiftleft"><p>shift</p></div>
+        <div class="key"><p>Z</p></div>
+        <div class="key"><p>X</p></div>
+        <div class="key"><p>C</p></div>
+        <div class="key"><p>V</p></div>
+        <div class="key"><p>B</p></div>
+        <div class="key"><p>N</p></div>
+        <div class="key"><p>M</p></div>
+        <div class="key">
+          <p>,<br /><</p>
+        </div>
+        <div class="key">
+          <p>.<br />></p>
+        </div>
+        <div class="key">
+          <p>/<br />?</p>
+        </div>
+        <div class="key Shift shiftright"><p>shift</p></div>
+
+        <div class="key"><p>ctrl</p></div>
+        <div class="key"><p>win</p></div>
+        <div class="key"><p>alt</p></div>
+        <div class="key"><p></p></div>
+        <div class="key"><p>alt</p></div>
+        <div class="key"><p>win</p></div>
+        <div class="key"><p>menu</p></div>
+        <div class="key"><p>ctrl</p></div>
+        <div class="key"><p><</p></div>
+        <div class="updown">
+          <div class="up ArrowUp"><p>&uarr;</p></div>
+          <div class="down ArrowDown"><p>&darr;</p></div>
+        </div>
+        <div class="key"><p>></p></div>
       </div>
-      <div class="numpad">
-        <div class="row row-numpad">
-          <button class="key">Num</button>
-          <button class="key">/</button>
-          <button class="key">*</button>
-          <button class="key">-</button>
-        </div>
-        <div class="row">
-          <button class="key">7</button>
-          <button class="key">8</button>
-          <button class="key">9</button>
-          <button class="key">+</button>
-        </div>
-        <div class="row">
-          <button class="key">4</button>
-          <button class="key">5</button>
-          <button class="key">6</button>
-        </div>
-        <div class="row">
-          <button class="key">1</button>
-          <button class="key">2</button>
-          <button class="key">3</button>
-          <button class="key tall">Enter</button>
-        </div>
-        <div class="row">
-          <button class="key wide">0</button>
-          <button class="key">.</button>
-        </div>
+
+      <div id="numpadblock">
+        <div class="key extra"><p>prtSc</p></div>
+        <div class="key extra"><p>scr lock</p></div>
+        <div class="key extra"><p>insert</p></div>
+        <div class="key extra"><p>home</p></div>
+        <div class="key extra"><p>del</p></div>
+        <div class="key extra"><p>num lock</p></div>
+        <div class="key"><p>/</p></div>
+        <div class="key"><p>*</p></div>
+        <div class="key"><p>-</p></div>
+        <div class="key"><p>7</p></div>
+        <div class="key"><p>8</p></div>
+        <div class="key"><p>9</p></div>
+        <div class="key"><p>4</p></div>
+        <div class="key"><p>5</p></div>
+        <div class="key"><p>6</p></div>
+        <div class="key"><p>1</p></div>
+        <div class="key"><p>2</p></div>
+        <div class="key"><p>3</p></div>
+        <div class="key"><p>0</p></div>
+        <div class="key"><p>.</p></div>
+        <div class="key"><p>enter</p></div>
       </div>
     </div>
   </body>
